# SciDoc

./: .gitattributes  .gitignore  INSTALL.md  LICENSE  README.md  environment.yml  pyproject.toml  scidoc.sh  setup.sh  setup_model.py
example_project/: README.md  data.csv  main.py  sample.fasta  sample.fastq  sample.vcf
models/: .gitkeep
models/flan-t5-base/: config.json
scidoc/: __init__.py  cli.py  config.py  core.py  document_generator.py  logger.py  models.py  scientific_parser.py  summarizer.py
scidoc/parsers/: __init__.py  bam_parser.py  base_parser.py  csv_parser.py  fastq_parser.py  generic_parser.py  image_parser.py  json_parser.py  jupyter_parser.py  markdown_parser.py  pdf_parser.py  python_parser.py  vcf_parser.py  yaml_parser.py
scidoc/summarizers/: __init__.py  base_summarizer.py  huggingface_summarizer.py  openai_summarizer.py
scidoc/validators/: __init__.py  compliance_checker.py
tests/: __init__.py  test_cli.py  test_models.py  test_parsers.py  test_storage.py  test_summarizers.py
tests/test_local/: __init__.py  test_example_run.py
